--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 @font-face {
     font-family: 'myfont';
     src: url('assets/fonts/Inconsolata-VariableFont_wdth\,wght.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-  }
+}
 
 
 body { 
