--- a/style.css
+++ b/style.css
@@ -8,13 +8,53 @@
     src: url('assets/fonts/Inconsolata-VariableFont_wdth\,wght.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    /* overflow: hidden; */
 }
-
 
 body { 
     font-family: 'myfont', sans-serif;
+    width: 90%;
+    margin: 0 auto;
+    background-image: url(assets/images/background-mobile.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff;
+    padding-top: 1em;
 
 }
-#imageContainer img {
-     max-width: 500px; max-height: 500px; 
+
+#dropContainer {
+    width: 100%;
+    height: 10em;
+    border: 3px dashed #ccc;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(45deg, #f3f3f3, #f3f3f3);
+    color: #333;
+    font-size: 16px;
+    text-align: center;
+    cursor: pointer;
 }
+#dropContainer img {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+}
+
+#dropContainer p {
+    margin: 0;
+    font-size: 14px;
+    color: #666;
+}
+
+#dropContainer input[type="file"] {
+    display: none;
+}
+.pattern-container{
+    height: 100vh;
+    position: absolute;
+}
+
