--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     margin: 0 auto;
     background-image: url(assets/images/background-mobile.png);
     background-position: center;
-    background-size: cover;
+    background-size: 100vh;
     background-repeat: no-repeat;
     color: #fff;
     padding-top: 1em;
@@ -27,13 +27,15 @@ body {
 #dropContainer {
     width: 100%;
     height: 10em;
-    border: 3px dashed #ccc;
+    border: 2px dashed #e1d0f17b;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(45deg, #f3f3f3, #f3f3f3);
+    background-color: #e1d0f118;
+    backdrop-filter: blur(3px);
+
     color: #333;
     font-size: 16px;
     text-align: center;
@@ -55,7 +57,20 @@ body {
     display: none;
 } */
 .pattern-container{
-    height: 100vh;
-    position: absolute;
+    position: relative;
 }
-
+.pattern{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+}
+.top-right{
+    top: 1em;
+    right: 0;
+    width: 10em;
+    /* background-color: red; */
+}
+.bottom-left{
+    bottom: -5em;
+    left: 0;
+}
