--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'myfont';
+    font-family: 'myfont', sans-serif;
 }
 @font-face {
     font-family: 'myfont';
@@ -32,6 +32,7 @@ article{
 .icon{
     background-color: #e1d0f118;
     border-radius: 10px;
+    --webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
     padding: 0.5em;
 }
@@ -59,6 +60,7 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #e1d0f118;
+    --webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
     margin-top: 1em;
 
@@ -158,4 +160,30 @@ button:hover{
     background: linear-gradient(to right, #fa8a7b, #fff);
     background-clip: text;
     color: transparent;
+}
+main{
+    position: relative;
+    /* display: flex;
+    flex-direction: column; */
+ 
+}
+.container {
+    position: absolute;
+    top: 2em;
+    left: 2em;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+#ticket-details{
+    
+}
+#ticket-details img{
+    border-radius: 10px;
+    
+}
+#userinfo{
+    display: flex;
+    gap: 1em;
+    margin-top: 1em;
 }
